# cinema-bot

./: README.md  pyproject.toml
src/: cinema_bot.py  db.py  movie_searcher.py
