[tool.poetry]
name = "cinemabot"
version = "0.1.0"
description = "Телеграм-бот для поиска фильмов по ключевым словам."
authors = ["Mikhail <erytw@outlook.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
aiogram = ">=3.20.0.post0,<4.0.0"
aiohttp = ">=3.11.18,<4.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
fuzzywuzzy = ">=0.18.0,<0.19.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
aiosqlite = "^0.21.0"
greenlet = "^3.2.2"
python-levenshtein = "^0.27.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
